# Rag-project

./: .env  .gitignore  main.py  package-lock.json  pyproject.toml  未命名绘图.drawio  架构图.drawio  毕业论文.fdb_latexmk  毕业论文.fls
api/: api_chat.py  api_manager.py  api_server.py  core.py  kimi_direct.py  notebook_rag_backend.py  rag_knowledge_manager.py  test.py
data/: knowledge_base.db
experiments/: 工程认证_RAG_实验元数据表_30页内筛选版.xlsx
experiments/4.1章/: final_note.md  local_validation_summary.md  plan.md  related_docs.md  results_index.md  run_compare.py  run_compare.sh  screenshot_suggestions.md  table_local_parser_compare.tex
experiments/4.3章/: best_3_cases.md  candidate_cases.md  related_files.md  summary.md  table_dense_limit_cases.tex  table_retrieval_case_compare.tex
experiments/parsing_eval/: manifest.csv  phase1_subset.csv  phase1_subset_report.md  summary.md
experiments/scripts/: build_dataset_index.py  build_gt_manifest.py  organize_parsing_results.py  parser_eval_v2.py  plot_parser_eval.py  run_parsing_all.py  run_parsing_experiment.py  run_phase1_parser_eval.py  select_phase1_subset.py  summarize_parser_eval.py  summarize_parsing_results.py
experiments/test/: final_output.md  marker_test_official.md  test.ipynb  (+1 more)
frontend/: package-lock.json  package.json  pnpm-lock.yaml
scripts/: init_system_docs.py  parse_documents.py  rag_executor.py  run_chunking.py  run_embedding.py  run_embedding_QZhou.py  run_rag.py  run_retrieval.py
thesis/: RAG.bib  毕业论文.aux  毕业论文.bbl  毕业论文.blg  毕业论文.fdb_latexmk  毕业论文.fls  毕业论文.synctex(busy)  毕业论文.tex  毕业论文.toc
web/: app.py
(+1202 files in other folders)
